--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@astrojs/vercel": "^8.2.7",
     "@resvg/resvg-js": "^2.6.2",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/d3": "^7.4.3",
     "astro": "^5.12.0",
+    "d3": "^7.9.0",
     "dayjs": "^1.11.13",
     "lodash.kebabcase": "^4.1.1",
     "remark-collapse": "^0.1.2",
