--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "astro": "^5.12.0",
     "d3": "^7.9.0",
     "dayjs": "^1.11.13",
+    "katex": "^0.16.22",
     "lodash.kebabcase": "^4.1.1",
+    "rehype-katex": "^7.0.1",
     "remark-collapse": "^0.1.2",
+    "remark-math": "^6.0.0",
     "remark-toc": "^9.0.0",
     "satori": "^0.15.2",
     "sharp": "^0.34.2",
